# dPL_Hydro_SNTEMP_DR

./: .gitignore  Jacobian.py  NWM_test.py  ODEsolver.py  PGML_STemp.yml  PGML_STemp_mod.yml  PGML_STemp_new.yml  README.md  env_dPL_Hydro_SNTEMP_linux.yaml  env_dPL_hydro_SNTEMP_windows.yaml  env_dPL_hydro_SNTEMP_windows.yml  environment.yml  environment_PGML_Linux.yml  environment_PGML_Windows.yml  installed-packages.txt  main.py  main_PRMS.py  main_SNTEMP_only.py  main_hydro_temp.py  main_marrmotPRMS_SNTEMP.py  main_marrmot_PRMS_only.py  pyproject.toml  python.sh  requirements-used.txt  rnn.py  rnn_dp.py
G:\Farshid\PGML_STemp_results\models/: Yp.pt
G:\Farshid\PGML_STemp_results\models/E_2000_R_730_B_99_H_100_dr_0.5/: model_Ep0.pt  model_Ep600.pt
G:\Farshid\PGML_STemp_results\models/E_2000_R_730_B_99_H_60_dr_0.5/: model_Ep200.pt  model_Ep600.pt
G:\Farshid\PGML_STemp_results\models/E_2000_R_730_B_99_H_80_dr_0.5/: model_Ep100.pt  model_Ep600.pt
HydroModels/config/: config.yaml  read_configurations.py
HydroModels_no_use/: HyMod.py  PRMS.py
MODELS/: Differentiable_models.py  PGML_STemp.py  PRMS.py  crit.py  potet.py  surface_runoff.py  train_test.py
MODELS/NN_models/: LSTM_models.py  MLP_models.py
MODELS/PET_models/: potet.py
MODELS/loss_functions/: NSEsqrtLoss_flow.py  NSEsqrtLoss_flow_temp.py  RmseLoss_F_T_BFI_PET_SWE.py  RmseLoss_flow_BFI_SWE.py  RmseLoss_flow_temp.py  RmseLoss_flow_temp_BFI.py  RmseLoss_flow_temp_BFI_AET.py  RmseLoss_flow_temp_BFI_AET_SWE.py  (+5 more)
config/: config.yaml  config_SNTEMP_only.yaml  config_hydro_temp.yaml  config_marrmotPRMS_SNTEMP.yaml  config_marrmot_PRMS_only.yaml  config_orderedDic.yaml  configurations.py  read_configurations.py
core/: data_prep.py  randomseed_config.py  read_configurations.py  small_codes.py
examples/: Fig1a.py  Fig1a0.py  Fig1b.py  Fig1cdef.py  Fig1cdef0.py  Fig2.py  Fig20.py  Fig3_S3_S4.py  Fig4_S2_S9.py  FigS1.py  FigS5_S6_S7_S8.py
nonlinearSolver/: NewRaphson.py
post/: plot.py  read_GHMs_dPLs.py  stat.py  stat_plots.py
(+40 files in other folders)
