[project]
name = "dpl-hydro-sntemp"
version = "0.1.0"
requires-python = ">=3.13, <3.14"
dependencies = [
    # Core scientific stack
    "numpy>=2.0",
    "scipy>=1.14",
    "pandas>=2.2",
    "statsmodels>=0.14",
    "scikit-learn>=1.5",
    "numexpr>=2.10",
    "bottleneck>=1.4",
    "joblib>=1.4",
    "threadpoolctl>=3.5",

    # Deep learning
    "torch>=2.4",
    "torchvision>=0.19",
    "torchviz>=0.0.2",

    # Visualization
    "matplotlib>=3.9",
    "pillow>=10.4",
    "imageio>=2.35",
    "opencv-python>=4.10; sys_platform == 'win32'",
    "opencv-python-headless>=4.10; sys_platform != 'win32'",
    "graphviz>=0.20",

    # Geospatial
    "cartopy>=0.23",
    "shapely>=2.0",
    "pyproj>=3.6",
    "pyshp>=2.3",
    "haversine>=2.8",

    # Jupyter / interactive
    "ipython>=8.26",
    "ipykernel>=6.29",
    "notebook>=7.2",
    "jupyter-client>=8.6",
    "jupyter-core>=5.7",

    # Data I/O
    "pyarrow>=17.0",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "et-xmlfile>=2.0",
    "ruamel.yaml>=0.18",

    # Hydrology / domain
    "dataretrieval>=1.0",
    "astral>=3.2",

    # HTTP / networking
    "requests>=2.32",
    "urllib3>=2.2",
    "idna>=3.7",
    "charset-normalizer>=3.3",
    "certifi>=2024.7",

    # Utilities
    "tqdm>=4.66",
    "colorama>=0.4.6; sys_platform == 'win32'",
    "python-dateutil>=2.9",
    "pytz>=2024.1",
    "tzdata>=2024.1",
    "packaging>=24.1",
    "typing-extensions>=4.12",
    "beautifulsoup4>=4.12",
    "soupsieve>=2.5",
]

[tool.uv]
package = false

[project.optional-dependencies]
dev = [
    "debugpy>=1.8",
]

# PyTorch with CUDA 12.8 — required for RTX 5090 (Blackwell, sm_120).
# For CPU only: https://download.pytorch.org/whl/cpu
[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
